--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ p {
 .first .s {
   font-weight: bolder;
   font-size: 25px;
-  height: 50px;
+  
 }
 
 .second .join {
@@ -199,9 +199,10 @@ p {
 }
 
 .s p {
-  font-size: 18px;
+  font-size: 20px;
   padding-bottom: 10px;
 }
+
 
 .second {
   padding-bottom: 75px;
@@ -221,14 +222,46 @@ p {
 }
 
 @media screen and (max-width: 991px) {
+.navbar{
+  height: 160px;
+  position: fixed;
+  width: 100%;
+}
+.menu img{
+  width: 75px;
+  height: 70px;
+  
 
-
+}
+.s p{
+  font-size: 40px;
+}
+.s div{
+  font-size: 40px;
+  line-height: 90px;
+  height: 60px;
+}
+.header h1{
+  padding-top: 160px;
+  font-size: 100%;
+}
+  .logo img{
+    width: 45%;
+    height: 25%;
+  }
     .navbar ul {
     display: none;
   }
 
   .header h1 {
+    font-size: 140px;
+  }
+  .header p{
     font-size: 40px;
+    line-height: 100px;
+    padding-top: 110px;
+    
+    
   }
 
   .rowf {
@@ -236,8 +269,9 @@ p {
   }
 
   .team h1 {
-    font-size: 40px;
-    padding-left: 4%;
+    font-size: 140px;
+    padding-top: 210px;
+    
   }
 
   .footer {
@@ -245,7 +279,21 @@ p {
   }
 
   .first input {
-    width: 300px;
+    width: 220px;
+    height: 140px;
+    font-size: 50px;
+    padding: 30px;
+    border-radius: 20px;
+    border-color: red;
+    
+  }
+  .first button{
+    width: 240px;
+    height: 150px;
+    border-radius: 20px;
+    font-size: 40px;
+    margin: 20px;
+    
   }
 
   .flex {
@@ -253,22 +301,27 @@ p {
   }
 
   .third {
-    padding-top: 30px;
+    padding-top: 50px;
   }
 
-  .fs div {
-    height: 30px;
+  .fs div img {
+    height: 60px;
+    width: 300px;
   }
 
   .second img {
-    width: 40px;
+    width: 90px;
+    height: 90px;
+    
   }
 
   .second .join {
-    height: 120px;
-    padding-top: 80px;
-    font-size: 20px;
+    height: 20px;
+    padding-top: 100px;
+    font-size: 70px;
     font-weight: bolder;
+    padding-bottom: 200px;
+    
   }
 
   .footer {
@@ -279,13 +332,13 @@ p {
     padding-left: 100px;
   }
 
-  .s {
-    padding-top: 50px;
-  }
+.third div{
+  font-size: 40px;
+ ;
+  height: 60px;
+}
 
-  .header p {
-    font-size: 20px;
-  }
+  
 
   .header {
     padding-left: 40px;
@@ -298,5 +351,22 @@ p {
 
   .first .s {
     padding-top: 10px;
+    font-size: 65px;
+  } 
+  .mic img{
+    width: 33%;
+    height: 1%;
+    border-radius: 50px;
   }
+ 
+  .mic div{
+    font-size: 60px;
+    line-height: 90px;
+  }
+  .container{
+    padding-top: 120px;
+    
+  }
+
 }
+
